--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # 网页的 Title，在浏览器标签页里可以看到
-title: 'xxx的简历' 
+title: '赵政康的简历' 
 
 # 如果部署的时候部署放在根目录而是子目录的，就要配置 publicPath
 # 比如在 GitHub Pages 里，需要配置为项目名称，如下。
@@ -15,6 +15,6 @@ headerInfo:
   # 头像，相对本配置文件路径，或者 URL
   # photo: 'https://avatars1.githubusercontent.com/u/22113206?s=460&v=4'
   # photo: './markdown/avatar.jpeg'
-  name: 'xxx'
-  phone: '110'
-  email: 'xx@xx.com'
+  name: '赵政康'
+  phone: '18072911084'
+  email: 'zzkenyon@163.com'
